Pointing to 8001 and added healthcheck
