# api/controllers/healthcheck.js
@@ -1,0 +1,9 @@
+'use strict';
+
+module.exports = {
+  get_healthcheck: get_healthcheck
+};
+
+function get_healthcheck(req, res) {
+  res.json();
+}
