# api/swagger/swagger.yaml
@@ -3,7 +3,7 @@ info:
   version: "0.0.1"
   title: Screen Sizes
 # during dev, should point to your local machine
-host: localhost:10010
+host: localhost:8001
 # basePath prefixes all resource paths 
 basePath: /
 # 
@@ -18,6 +18,18 @@ consumes:
 produces:
   - application/json
 paths:
+  /healthcheck:
+    x-swagger-router-controller: "healthcheck"  
+    get:
+      summary: "Health check for load balancer"
+      description: "LB health check"
+      operationId: "get_healthcheck"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "health okay response"
+      
   /screen_sizes:
     # binds a127 app logic to a route
     x-swagger-router-controller: screen_sizes
